--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     </section>
   </main>
 
-  <script src="assets/js/script.js"></script>
+<link rel="stylesheet" href="css/style.css">
+<script src="js/script.js"></script>
 </body>
 </html>
