--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </header>
 
     <main>
+      <!-- Section for adding workouts -->
       <section id="add-workout-section">
         <h2>Add Strength Workout</h2>
         <form id="workout-form">
@@ -35,12 +36,14 @@
         </form>
       </section>
 
+      <!-- Section for workout log -->
       <section id="log-section" style="display: none;">
         <h2>Workout Log</h2>
         <ul id="workout-log"></ul>
       </section>
     </main>
 
+    <!-- Link to your JavaScript (must be lowercase: script.js) -->
     <script src="script.js"></script>
   </body>
 </html>
